--- a/ProfSite/Resources/Resource.resx
+++ b/ProfSite/Resources/Resource.resx
@@ -1050,4 +1050,7 @@
   <data name="PasswordText" xml:space="preserve">
     <value>Password</value>
   </data>
+  <data name="AboutUsText" xml:space="preserve">
+    <value>About Us</value>
+  </data>
 </root>
