--- a/ProfSite/Resources/Resource.resx
+++ b/ProfSite/Resources/Resource.resx
@@ -1053,4 +1053,16 @@
   <data name="AboutUsText" xml:space="preserve">
     <value>About Us</value>
   </data>
+  <data name="LinkYourFacebook" xml:space="preserve">
+    <value>Link your Facebook</value>
+  </data>
+  <data name="LinkYourTwitter" xml:space="preserve">
+    <value>Link your Twitter</value>
+  </data>
+  <data name="UnlinkYourFacebook" xml:space="preserve">
+    <value>Unlink your Facebook</value>
+  </data>
+  <data name="UnlinkYourTwitter" xml:space="preserve">
+    <value>Unlink your Twitter</value>
+  </data>
 </root>
